gaps fixed

--- a/src/experiments/VerticalWheelCarousel.module.css
+++ b/src/experiments/VerticalWheelCarousel.module.css
@@ -12,7 +12,7 @@
     overflow: hidden;
     display: flex;
     /* gap:1rem; */
-    padding: .5rem;
+    padding: 1rem;
     margin: 0 auto;
     box-sizing: border-box;
     /* border:1px solid red; */
@@ -34,7 +34,7 @@
     width:50%;
     display: flex;
     flex-wrap: wrap;
-    gap:.5rem;
+    gap:1rem;
     transition:all .3s linear;
 }
 
@@ -74,7 +74,7 @@
 }
 
 .group.two {
-    padding-left: .5rem;
+    padding-left: 1rem;
     position: relative;
 }
 
@@ -82,6 +82,16 @@
     .group .picture {
         height: 380px;
         max-width: 400px;
+    }
+    /* gaps */
+    .group {
+        gap:.5rem;
+    }
+    .container {
+        padding: .5rem;
+    }
+    .group.two {
+        padding-left: .5rem;
     }
 }
 
